# macfusepy

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  setup.py
.github/workflows/: publish-to-pypi-uv.yml
docs/: macfuse-libfuse3-cython-binding-guide.md  pyfuse3-async-architecture.md
docs/macfuse.wiki/: Declaring-File-System-Capabilities.md  FUSE-Backends.md  FUSE-Features.md  FUSE-User-Space-Libraries.md  File-Names-(Unicode-Normalization-Forms).md  File-Systems-‐-Reference-File-Systems.md  File-Systems-‐-SSHFS.md  Frequently-Asked-Questions.md  Getting-Started-(Developer).md  Getting-Started.md  History.md  Home.md  Mount-Options.md  Open-Source-Status.md  Troubleshooting.md
examples/: context.py  ioctl.c  ioctl.py  loopback.py  memory.py  sftp.py
macfusepy/: __init__.py  _core.py  _core.pyi  _lowlevel.py  _readonly_async_tree.py  _runtime.py  errors.py  fuse3.pxd  inode_operations.py  lowlevel_async.py  operations.py  path_operations.py  types.py
tests/: conftest.py  test_benchmarks.py  test_examples_context.py  test_examples_ioctl.py  test_examples_loopback.py  test_examples_memory.py  test_lowlevel_async.py  test_mounted_runtime.py  test_operations.py  test_public_api.py  test_runtime.py  test_types.py
